# ubergraph

./: README.md  pyproject.toml
src/ubergraph/: ubergraph.py  ubergraph_test.py
src/ubergraph.egg-info/: PKG-INFO  SOURCES.txt
